Fix chat overall height (no scrollbar anymore)

--- a/root/css/layout.css
+++ b/root/css/layout.css
@@ -1,6 +1,6 @@
 #chat {
     display: flex;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 51px);
     overflow: hidden;
 }
 
